# ai-for-non-developers

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
cli/: get-aind.sh  install.sh  pyproject.toml
cli/aind/: __init__.py  main.py  platform.py  registry.py  version_check.py
cli/aind/commands/: init.py  skill.py  status.py
docs/: FOUNDER_MODE.md  NATURAL_PROMPTS.md  README.md  prompting-guide.md  quickstart.md
examples/: CLAUDE.md  LOW_TOKEN_WORKFLOWS.md  OUTPUT_RULES.md  REVIEW_MODE.md  SESSION_STRATEGY.md
skills/skill-registry/community/: index.json
skills/skill-registry/verified/: index.json
skills/skill-registry/verified/skill-creator/: SKILL.md
templates/: AGENT.md
