[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aind"
dynamic = ["version"]
description = "AI for Non-Developers — project management CLI"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "rich>=13",
]

[project.scripts]
aind = "aind.main:app"

[tool.setuptools.dynamic]
version = {file = "aind/VERSION"}

[tool.setuptools.package-data]
aind = ["VERSION"]

[tool.setuptools.packages.find]
where = ["."]
include = ["aind*"]
